fixed fixed margins edited color schemes added smooth scrolling added anchor tags to not overlap with fixed navbar added jquery to collapse navbar on selection

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
     font-family: Arial, Helvetica, sans-serif;
     padding: 50px 0px 0px 0px;
     z-index: 0; 
     margin-top: 50px;
     margin-bottom: 100px;
-    background: rgb(255, 250, 180);
+    background: #fff;
 }
 
 .row{
@@ -16,6 +19,23 @@ body{
     width: 80%;
     font-size: 2em;
 }
+
+.navbar{
+
+    margin-bottom: 100px;
+}
+
+.anchor {
+    display: block;
+    position: relative;
+    top: -250px;
+    visibility: hidden;
+}
+
+.anchorPad{
+    padding-top: 60px;
+}
+
 
 .navbar-light {
     background-color: #F9C80e;
@@ -37,13 +57,20 @@ body{
     font-weight: 800;
     padding: 0;
     letter-spacing: 5px;
-    background: rgb(255, 250, 180);
+    background: #fff;
     color: black;
 }
 
 #projects .card{
     margin-top: 15px;
-    background-color: rgb(255, 248, 144);
+}
+
+.card .btn{
+    background-color: #F3D34A;
+    border-color: #F3D34A;
+    color: black;
+    font-weight:bold;
+    text-transform: uppercase;
 }
 
 main{
